Finished exploring the dataset, Building the preprocesing program

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy\n",
-    "from spotipy.oauth2 import SpotifyClientCredentials"
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,73 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for track in sp.playlist_tracks(playlist_URI)[\"items\"]:\n",
-    "    #URI\n",
-    "    track_uri = track[\"track\"][\"uri\"]\n",
-    "    \n",
-    "    #Track name\n",
-    "    track_name = track[\"track\"][\"name\"]\n",
-    "    \n",
-    "    #Main Artist / this would only take information of the first artist, maybe a song could have more than one\n",
-    "    artist_uri = track[\"track\"][\"artists\"][0][\"uri\"]\n",
-    "    artist_info = sp.artist(artist_uri)\n",
-    "    \n",
-    "    #Name, popularity, genre\n",
-    "    artist_name = track[\"track\"][\"artists\"][0][\"name\"]\n",
-    "    artist_pop = artist_info[\"popularity\"]\n",
-    "    artist_genres = artist_info[\"genres\"]\n",
-    "    \n",
-    "    #Album\n",
-    "    album = track[\"track\"][\"album\"][\"name\"]\n",
-    "    \n",
-    "    #Popularity of the track\n",
-    "    track_pop = track[\"track\"][\"popularity\"] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'danceability': 0.315,\n",
-       " 'energy': 0.715,\n",
-       " 'key': 11,\n",
-       " 'loudness': -8.072,\n",
-       " 'mode': 0,\n",
-       " 'speechiness': 0.0362,\n",
-       " 'acousticness': 0.00125,\n",
-       " 'instrumentalness': 7.97e-06,\n",
-       " 'liveness': 0.0942,\n",
-       " 'valence': 0.497,\n",
-       " 'tempo': 155.925,\n",
-       " 'type': 'audio_features',\n",
-       " 'id': '6Qyc6fS4DsZjB2mRW9DsQs',\n",
-       " 'uri': 'spotify:track:6Qyc6fS4DsZjB2mRW9DsQs',\n",
-       " 'track_href': 'https://api.spotify.com/v1/tracks/6Qyc6fS4DsZjB2mRW9DsQs',\n",
-       " 'analysis_url': 'https://api.spotify.com/v1/audio-analysis/6Qyc6fS4DsZjB2mRW9DsQs',\n",
-       " 'duration_ms': 289533,\n",
-       " 'time_signature': 3}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sp.audio_features(track_uri)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +54,7 @@
        "dict_keys(['preview_url', 'available_markets', 'explicit', 'type', 'episode', 'track', 'album', 'artists', 'disc_number', 'track_number', 'duration_ms', 'external_ids', 'external_urls', 'href', 'id', 'name', 'popularity', 'uri', 'is_local'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,72 +65,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['preview_url', 'available_markets', 'explicit', 'type', 'episode', 'track', 'album', 'artists', 'disc_number', 'track_number', 'duration_ms', 'external_ids', 'external_urls', 'href', 'id', 'name', 'popularity', 'uri', 'is_local'])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.playlist_tracks(playlist_URI)['items'][0]['track'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "artist_uri = sp.playlist_tracks(playlist_URI)['items'][0]['track']['artists'][0]['uri']\n",
-    "artist = sp.artist(artist_uri)"
+    "#sp.artist(artist_uri)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Die With A Smile'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sp.playlist_tracks(playlist_URI)['items'][0]['track']['name']"
+    "#working on the world popular song playlist. Later on: if work on different playlists, add a playlist_name column.\n",
+    "songs_dict = {'track_uri':[], 'track_name': [], 'artist_name': [], 'artist_uri': [], 'album_name': [], 'album_uri': [],\n",
+    "            'danceability': [], 'energy': [], 'key': [], 'loudness': [], 'mode': [], 'speechiness': [], 'acousticness': [],\n",
+    "            'instrumentalness': [], 'liveness': [], 'valence': [], 'tempo': [], 'track_href': [], 'analysis_url': [],\n",
+    "            'duration_ms': [], 'time_signature': [], 'artist_pop': [], 'genres': [], 'track_pop': []}\n",
+    "for track in sp.playlist_tracks(playlist_URI)[\"items\"]:\n",
+    "    #track_uri, track_name\n",
+    "    songs_dict['track_uri'].append(track[\"track\"][\"uri\"])\n",
+    "    songs_dict['track_name'].append(track[\"track\"][\"name\"])\n",
+    "    \n",
+    "    #artist_uri, artist_name, genres / this would only take information of the first artist, maybe a song could have more than one\n",
+    "    songs_dict['artist_uri'].append(track[\"track\"][\"artists\"][0][\"uri\"])\n",
+    "    artist_uri = track[\"track\"][\"artists\"][0][\"uri\"]\n",
+    "    songs_dict['artist_name'].append(track[\"track\"][\"artists\"][0]['name'])\n",
+    "    artist_info = sp.artist(artist_uri)\n",
+    "    songs_dict[\"genres\"].append(artist_info[\"genres\"])\n",
+    "\n",
+    "    #album_name, album_uri \n",
+    "    songs_dict['album_name'].append(track[\"track\"][\"album\"][\"name\"])\n",
+    "    songs_dict['album_uri'].append(track[\"track\"][\"album\"][\"uri\"])\n",
+    "    \n",
+    "    #audio_features\n",
+    "    audio_features = sp.audio_features(track[\"track\"][\"uri\"])[0]\n",
+    "    songs_dict[\"danceability\"].append(audio_features[\"danceability\"])\n",
+    "    songs_dict[\"energy\"].append(audio_features[\"energy\"])\n",
+    "    songs_dict[\"key\"].append(audio_features[\"key\"])\n",
+    "    songs_dict[\"loudness\"].append(audio_features[\"loudness\"])\n",
+    "    songs_dict[\"mode\"].append(audio_features[\"mode\"])\n",
+    "    songs_dict[\"speechiness\"].append(audio_features[\"speechiness\"])\n",
+    "    songs_dict[\"acousticness\"].append(audio_features[\"acousticness\"])\n",
+    "    songs_dict[\"instrumentalness\"].append(audio_features[\"instrumentalness\"])\n",
+    "    songs_dict[\"liveness\"].append(audio_features[\"liveness\"])\n",
+    "    songs_dict[\"valence\"].append(audio_features[\"valence\"])\n",
+    "    songs_dict[\"tempo\"].append(audio_features[\"tempo\"])\n",
+    "    songs_dict[\"track_href\"].append(audio_features[\"track_href\"])\n",
+    "    songs_dict[\"analysis_url\"].append(audio_features[\"analysis_url\"])\n",
+    "    songs_dict[\"duration_ms\"].append(audio_features[\"duration_ms\"])\n",
+    "    songs_dict[\"time_signature\"].append(audio_features[\"time_signature\"])\n",
+    "\n",
+    "    #artist_pop, track_pop\n",
+    "    songs_dict['artist_pop'].append(artist_info[\"popularity\"])\n",
+    "    songs_dict['track_pop'].append(track[\"track\"][\"popularity\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['external_urls', 'followers', 'genres', 'href', 'id', 'images', 'name', 'popularity', 'type', 'uri'])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "artist.keys()"
+    "songs_df = pd.DataFrame.from_dict(songs_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "91"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "artist['popularity']"
+    "# use to eliminate same song appearing in different playlists, but we are only using 1 playlist, so this function is meaningless\n",
+    "def dedup(df):\n",
+    "    df[\"artist_song\"] = df.apply(lambda row: row['arist_name'] + row['track_name'], axis = 1)\n",
+    "    return df.drop_duplicates('artist_song')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Features Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metadata ( features described the song but not the song itself )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#genres, track_pop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Firstly, we need to deal with categorical data, such as genres, key, mode, polar -> One-hot encoding and TF-IDF (weighted OHE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ohe(df, col):\n",
+    "    '''''\n",
+    "    Input: \n",
+    "    - a dataframe containing a column we want to encode: df\n",
+    "    - the name of that column: col\n",
+    "    Output:\n",
+    "    - a new dataframe with encoded information\n",
+    "    '''''\n",
+    "    category_df = pd.get_dummies(df[col])\n",
+    "    feature_name = category_df.columns\n",
+    "    category_df.columns = [str(col) + \"|\" + str(genre) for genre in feature_name]\n",
+    "    category_df.reset_index(drop = True, inplace = True)\n",
+    "    return category_df"
    ]
   }
  ],
