--- a/content_based_rcm.ipynb
+++ b/content_based_rcm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,28 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\voqua\\AppData\\Local\\Temp\\ipykernel_68820\\1618325787.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  songDF['track_uri'] = songDF['track_uri'].apply(lambda x: re.findall(r'\\w+$', x)[0])\n",
-      "C:\\Users\\voqua\\AppData\\Local\\Temp\\ipykernel_68820\\1618325787.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  songDF['album_uri'] = songDF['album_uri'].apply(lambda x: re.findall(r'\\w+$', x)[0])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#but we don't need to use these uris thou\n",
     "#songDF['track_uri'] = songDF['track_uri'].apply(lambda x: re.findall(r'\\w+$', x)[0])\n",
@@ -131,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +326,18 @@
     "    non_playlist_df['sim'] = cosine_similarity(nonplaylist_features.drop(['track_uri'], axis = 1).values, feature_temp.values.reshape(1, -1))[:,0]\n",
     "    non_playlist_df_top_40 = non_playlist_df.sort_values('sim',ascending = False).head(40)\n",
     "    \n",
-    "    return non_playlist_df_top_40"
+    "    return non_playlist_df_top_40, non_playlist_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_temp = complete_feature_set_playlist_vector.drop(['track_uri'])\n",
+    "nonplaylist_features = complete_feature_set_nonplaylist\n",
+    "cs = cosine_similarity(nonplaylist_features.drop(['track_uri'], axis = 1).values, feature_temp.values.reshape(1, -1))"
    ]
   },
   {
@@ -367,9 +359,126 @@
     }
    ],
    "source": [
-    "# Genreate top 10 recommendation\n",
+    "# Genreate top 40 recommendation\n",
     "\n",
     "recommend = generate_playlist_recos(preprocessed_df, complete_feature_set_playlist_vector, complete_feature_set_nonplaylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mr. Brightside</td>\n",
+       "      <td>The Killers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>We Found Love</td>\n",
+       "      <td>Rihanna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Best Day Of My Life</td>\n",
+       "      <td>American Authors</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rather Be (feat. Jess Glynne)</td>\n",
+       "      <td>Clean Bandit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chandelier</td>\n",
+       "      <td>Sia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Coming Your Way</td>\n",
+       "      <td>Beach Avenue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Collide (feat. Jonathan Thulin)</td>\n",
+       "      <td>Built By Titan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Come Alive</td>\n",
+       "      <td>Astoria Kings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Best of 2012: Payphone / Call Me Maybe / Wide ...</td>\n",
+       "      <td>Anthem Lights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Always Summer</td>\n",
+       "      <td>Yellowcard</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           track_name       artist_name\n",
+       "0                                      Mr. Brightside       The Killers\n",
+       "1                                       We Found Love           Rihanna\n",
+       "2                                 Best Day Of My Life  American Authors\n",
+       "3                       Rather Be (feat. Jess Glynne)      Clean Bandit\n",
+       "4                                          Chandelier               Sia\n",
+       "..                                                ...               ...\n",
+       "70                                    Coming Your Way      Beach Avenue\n",
+       "71                    Collide (feat. Jonathan Thulin)    Built By Titan\n",
+       "72                                         Come Alive     Astoria Kings\n",
+       "73  Best of 2012: Payphone / Call Me Maybe / Wide ...     Anthem Lights\n",
+       "74                                      Always Summer        Yellowcard\n",
+       "\n",
+       "[74 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlistDF[[\"track_name\", \"artist_name\"]]"
    ]
   },
   {
